--- a/fake_vs_real.ipynb
+++ b/fake_vs_real.ipynb
@@ -6,7 +6,9 @@
       "name": "fake_vs_real.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "authorship_tag": "ABX9TyMyD1AXhvty7xwsGY64ZY+r",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -20,8 +22,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rakeshpa85/CNN_Models/blob/main/fake_vs_real.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "GSq9qo2PF8VZ"
       },
@@ -64,7 +76,7 @@
         "id": "ySYY-wizN3Xu",
         "outputId": "0060dc6f-0f9d-4c0c-b064-d51a72f2a502"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +101,7 @@
       "metadata": {
         "id": "vE0Z8MiCL2ut"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +117,7 @@
         "id": "isvf4PIyVTLG",
         "outputId": "6aff9b92-b236-4d86-d58a-4ef6092a49a4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -144,7 +156,7 @@
         "id": "GQl5DjBOWKLb",
         "outputId": "55fe070c-45dd-49ea-eafe-d1ef96af82cd"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +196,7 @@
       "metadata": {
         "id": "fWOmGBPSP4wF"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +213,7 @@
       "metadata": {
         "id": "UcDd96wERmuu"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +229,7 @@
       "metadata": {
         "id": "ecLGEp3tRoVW"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +251,7 @@
         "id": "G_9fFINHnA62",
         "outputId": "de263a38-6a90-40b1-dd24-8edce5d1ee56"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +278,7 @@
       "metadata": {
         "id": "bVFjcV3KrpL3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -300,7 +312,7 @@
         "id": "U0K_GJLVodFh",
         "outputId": "a6545a2d-4dec-4554-b3e8-5809bf1d7be8"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -347,7 +359,7 @@
         "id": "LJiaHYw4Rrmy",
         "outputId": "c4d2f3cb-6a0b-4172-9a13-3600d1bb6b80"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +388,7 @@
         "id": "3AzgnXHimAA9",
         "outputId": "5889f984-b657-4e54-c042-c208f26c0d83"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +414,7 @@
         "id": "k9lSqz8WmwiJ",
         "outputId": "d8dae6df-79af-4116-f224-44792010a958"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -439,7 +451,7 @@
       "metadata": {
         "id": "fCKjI0OlSSGX"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +479,7 @@
       "metadata": {
         "id": "niyKhgpSSx2P"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +494,7 @@
         "id": "U3QU1sw0gAxE",
         "outputId": "6ac7afbc-c37d-425d-984c-fc7b9182f480"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -520,7 +532,7 @@
       "metadata": {
         "id": "I7dnJbEtS58e"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +545,7 @@
       "metadata": {
         "id": "OScmKu1QUY-D"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +556,7 @@
       "metadata": {
         "id": "wLXFrFz1YOPy"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -556,7 +568,7 @@
       "metadata": {
         "id": "v5UFHJsl_nGM"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +597,7 @@
       "metadata": {
         "id": "lLIJkKd3x2F-"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -599,7 +611,7 @@
       "metadata": {
         "id": "R4Bpw65pGu3X"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -611,7 +623,7 @@
       "metadata": {
         "id": "CnswPc_aG7Kw"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -622,7 +634,7 @@
       "metadata": {
         "id": "m_irezunKt8R"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -640,7 +652,7 @@
         "id": "55FR-qNdPdhu",
         "outputId": "f99eda8a-0047-4c5e-f56e-46fe498fdb3c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +767,7 @@
       "metadata": {
         "id": "rToWfeYvPy1B"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -767,7 +779,7 @@
       "metadata": {
         "id": "qIfOwWtRQOSO"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -801,7 +813,7 @@
         "id": "W40losznTl_H",
         "outputId": "ce5ebc6a-39c9-4b60-c2ae-2697e09d101a"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,7 +892,7 @@
       "metadata": {
         "id": "G_tFMgpWUuD5"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -913,7 +925,7 @@
         "id": "Rd310rNEWKC5",
         "outputId": "cf8c86d9-7b1c-4619-9c73-f2cc728a3ba1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -974,7 +986,7 @@
       "metadata": {
         "id": "pOWDwXWZYfOB"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
